# BigFloatCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
BigFloat/: bigfloat.cpp  bigfloat.hpp
big/: CMakeLists.txt  arithmetics.cpp  arithmetics.hpp  bigfloat.cpp  bigfloat.hpp
tests/: CMakeLists.txt  arithmetics.cpp  compares.cpp  constructors.cpp  test.cpp
